fix: remove horizontal scrollbar when resizing textarea

--- a/src/scss/shared/inputs.scss
+++ b/src/scss/shared/inputs.scss
@@ -54,6 +54,7 @@ input[type='file'] {
         position: relative;
         display: flex;
         flex-shrink: 0;
+        box-sizing: border-box;
 
         &.text,
         &.textarea,
